# scaffold-repo

./: .gitignore  README-alt.md  README-templates.md  README.md  pre-commit-config.yaml  pyproject.toml  setup-python.sh
src/scaffold_repo/: __init__.py  build_libs.py  config_reader.py  repo_sync.py  scaffold_repo.py  scaffoldrc.py  xx.py
src/scaffold_repo/cli/: build_main.py  create_main.py  git_main.py  init_main.py  main.py  resolver.py  sync_main.py  ui.py  workspace.py
src/scaffold_repo/compliance/: licenses.py
src/scaffold_repo/core/: config.py
src/scaffold_repo/create/: cli_plugin.py
src/scaffold_repo/git/: cli_plugin.py  orchestrator.py
src/scaffold_repo/init/: cli_plugin.py
src/scaffold_repo/sync/: cli_plugin.py
src/scaffold_repo/templating/: planner.py  source.py
src/scaffold_repo/utils/: collections.py  git.py  shell.py  text.py
templates/: .scaffold-defaults.yaml  BUILDING.md.j2  CMakeLists.txt.j2  _config.yml.j2  scaffold-repo.yaml
templates/app-resources/cmake-c/: CMakeLists.txt.j2
templates/base/: README.md.j2
templates/flavors/cmake-c/: CMakeLists.txt.j2  Dockerfile.j2  build.sh.j2
templates/libraries/andy-curtis/: a-bitset-library.yaml  a-curl-library.yaml  a-curl-openai-plugin.yaml  a-json-library.yaml  a-json-sax-library.yaml  a-json-schema-builder-library.yaml  a-map-reduce-library.yaml  a-sentence-chunker-library.yaml  a-tokenizer-library.yaml  an-encryption-library.yaml  embedding-library.yaml  h2o-c-library.yaml  restinio-c.yaml  search-index-library.yaml  sql-parser-library.yaml  stemmer-library.yaml  the-io-library.yaml  the-lz4-library.yaml
templates/libraries/common/: asio.yaml  h2o.yaml  libjwt.yaml  libuv.yaml
templates/libraries/custom/: expected-lite.yaml  fmt.yaml  restinio.yaml
templates/library-templates/: cmake-c-git.yaml
templates/licenses/: apache-2.0.yaml  bsd-3.yaml  mit.txt
templates/licenses/andy-curtis/: andy.yaml  gcloud-api.yaml  knode-andy-maintainer.yaml  (+4 more)
templates/tests/: CMakeLists.txt.j2
(+6 files in other folders)
